# mftp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: fs_ext.rs  lib.rs  main.rs  progress.rs  sftp.rs  ssh.rs
src/compress/: detect.rs  mod.rs
src/fec/: codec.rs  mod.rs
src/net/: connection.rs  mod.rs  tcp.rs
src/protocol/: framing.rs  messages.rs  mod.rs
src/transfer/: chunk.rs  hash.rs  mod.rs  negotiate.rs  receiver.rs  resume.rs  sender.rs
tests/: analyze.py  bench.sh  transfer.rs
tests/results/20260330_125646/: phase1_positioning.csv
tests/results/20260330_132700/: phase1_positioning.csv
tests/results/20260330_143645/: phase2_streams.csv
tests/results/20260330_150713/: phase3_chunksize.csv  phase4_transport.csv  phase5_compression.csv
tests/results/20260330_151318/: phase3_chunksize.csv
tests/results/20260330_152846/: phase4_transport.csv
tests/results/20260330_154429/: phase5_compression.csv
tests/results/20260330_155040/: phase3_chunksize.csv
tests/results/20260330_160753/: phase3_chunksize.csv
tests/results/20260330_161557/: phase4_transport.csv
tests/results/20260330_163952/: phase1_positioning.csv
tests/results/20260330_172116/: phase1_positioning.csv
