[package]
name = "mftp"
version = "0.1.30"
edition = "2021"
description = "High-throughput file transfer over high-latency internet links"
license = "MIT"
repository = "https://github.com/OmarHermannsson/mftp"
homepage = "https://github.com/OmarHermannsson/mftp"
documentation = "https://github.com/OmarHermannsson/mftp#readme"
keywords = ["file-transfer", "quic", "network", "ssh", "transfer"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "mftp"
path = "src/main.rs"

[lib]
name = "mftp"
path = "src/lib.rs"

[dependencies]
# QUIC transport
# default-features = false drops aws-lc-rs (a C library) from both rustls and
# tokio-rustls; we only use the pure-Rust ring provider.
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rcgen = "0.13"
socket2 = { version = "0.5", features = ["all"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization (protocol messages + SSH handshake)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Compression
zstd = "0.13"

# Hashing / integrity
sha2 = "0.10"
hex = "0.4"

# Forward error correction
reed-solomon-erasure = "6"

# Progress reporting
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SSH / SFTP (for the SFTP fallback transport)
ssh2 = "0.9"
base64 = "0.22"
# HMAC-SHA1 for hashed known_hosts verification
hmac = "0.12"
sha1 = "0.10"

# Misc
bytes = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
